--- a/index.css
+++ b/index.css
@@ -23,41 +23,24 @@ body {
   box-sizing: border-box;
   background: var(--bg-color);
   border-radius: 8px;
-}
-
-.skew_container {
-  position: absolute;
-  top: 38px;
-  width: 488px;
-  height: 53px;
-  display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  box-sizing: border-box;
-  /* overflow: hidden; */
-  background: var(--bg-color);
-  border-radius: 8px;
-  /* opacity: 50%; */
+  overflow: hidden;
 }
 
 .p1.container {
   transform: skew(20deg);
   left: 410px;
   flex-direction: row;
-  overflow: hidden;
 }
 
 .p2.container {
   transform: skew(-20deg);
   right: 410px;
   flex-direction: row-reverse;
-  overflow: hidden;
 }
 
 .name {
   display: flex;
   width: 100%;
-  /* width: 346px; */
   height: 53px;
   font-size: 26px;
   justify-content: center;
@@ -67,7 +50,6 @@ body {
   overflow: hidden;
   color: var(--text-color);
   word-spacing: 2px;
-  /* background-color: red; */
 }
 
 .p1 .name {
@@ -144,20 +126,28 @@ body {
   z-index: 9;
 }
 
-.flags_container {
+.placeholder_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.flag {
+.placeholder {
   display: inline-block;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: 65px;
+  width: 70px;
   height: 53px;
   /* background-color: yellow; */
+}
+
+.p1 .placeholder {
+  background: var(--p1-score-bg-color);
+}
+
+.p2 .placeholder {
+  background: var(--p2-score-bg-color);
 }
 
 .score {
@@ -171,7 +161,6 @@ body {
 }
 
 .score_container {
-  /* position: absolute; */
   justify-content: center;
   text-align: center;
   width: 62px;
@@ -182,10 +171,8 @@ body {
 }
 
 .p1 .score {
-  /* margin-left: 12px; */
   color: var(--p1-score-color);
   transform: skew(-20deg);
-  /* background: var(--p1-score-bg-color); */
 }
 
 .p1 .score_container {
@@ -196,10 +183,8 @@ body {
 }
 
 .p2 .score {
-  /* margin-right: 12px; */
   color: var(--p2-score-color);
   transform: skew(20deg);
-  /* background: var(--p2-score-bg-color); */
 }
 
 .p2 .score_container {
@@ -241,11 +226,25 @@ body {
   transition: opacity 0.5s ease-in-out;
 }
 
+.flag {
+  display: inline-block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 8px;
+  height: 30px;
+  width: 45px;
+}
+
+.under_chips .flag {
+  opacity: 0%;
+}
+
 .chips {
   display: flex;
   position: absolute;
   top: 4px;
-  width: 880px;
+  width: 881px;
   height: 30px;
   align-content: center;
   justify-content: left;
@@ -256,20 +255,17 @@ body {
   display: flex;
   position: absolute;
   top: 4px;
-  width: 880px;
+  width: 881px;
   height: 30px;
   align-content: center;
   justify-content: left;
   overflow: hidden;
-  /* background: red; */
 }
 
 .p1.chips {
-  /* transform: skew(20deg); */
   flex-direction: row-reverse;
   justify-content: right;
   left: 0px;
-  /* background: red; */
 }
 
 .p1.under_chips {
@@ -277,18 +273,15 @@ body {
   flex-direction: row-reverse;
   justify-content: right;
   left: 0px;
-  /* background: red; */
 }
 
 .p2.under_chips {
   transform: skew(-20deg);
   right: 0px;
-  /* background: red; */
 }
 
 .p2.chips {
   right: 0px;
-  /* background: blue; */
 }
 
 .chip {
@@ -328,20 +321,27 @@ body {
   background: var(--p2-score-bg-color);
 }
 
-.topleft.container {
-  left: 0px;
-  left: -15px;
-  /* justify-content: center; */
-  width: 350px;
-  width: 362px;
-  /* background: red; */
+.under_chips .flagcountry.chip {
+  opacity: 0%;
+}
 
+.p1 .flagcountry.chip .text:not(.text_empty) {
+  padding-right: 0px;
+}
+
+.p2 .flagcountry.chip .text:not(.text_empty) {
+  padding-left: 0px;
+}
+
+.topleft.container {
+  left: -15px;
+  width: 360px;
+  overflow: visible;
   display: flex;
   position: absolute;
   align-content: center;
   justify-content: left;
-  /* overflow: hidden; */
-  background: rgba(0, 0, 0, 0);
+  background: red;
 }
 
 .phase_container {
@@ -415,15 +415,11 @@ body {
   flex-direction: column;
   font-size: 20px;
 
-  /* border-width: 4px; */
-  /* border-width: 3px; */
-  /* border-color: white; */
+  border-width: 3px;
   border-color: var(--bg-color);
   border-color: var(--text-color);
   border-style: solid;
   border-radius: 8px;
-
-  /* background: rgba(0, 0, 0, 0.8); */
 }
 
 .p1_won {
@@ -459,27 +455,41 @@ body {
   background: var(--p2-score-bg-color);
 }
 
-.character_container {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.p1 .tsh-center-image {
+  transform: skew(-20deg);
 }
 
-.p1 .character_container {
+.p2 .tsh-center-image {
+  transform: skew(-20deg);
+}
+
+.edge {
+  position: absolute;
+  width: 70px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.p1 .edge {
   left: 0px;
 }
 
-.p2 .character_container {
+.p2 .edge {
   right: 0px;
 }
 
-.tsh_character_container {
-  flex-direction: column;
-  overflow: hidden;
-  width: 65px;
-  height: 100px;
-  /* background-color: red; */
+.character_container {
+  position: absolute;
+  margin: 0 auto;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100%;
+  width: 130px;
+}
+
+.p1 .character_container {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .p1 .tsh_character {
@@ -488,33 +498,5 @@ body {
 
 .p2 .tsh_character {
   background: var(--p2-score-bg-color);
-}
-
-.p2 .tsh_character {
   transform: scaleX(-1);
-}
-
-.tsh-center-image {
-  top: 5px;
-}
-
-.p1 .tsh-center-image {
-  transform: skew(-20deg);
-  right: 9px;
-  height: 85px;
-  width: 85px;
-}
-
-.p2 .tsh-center-image {
-  transform: skew(-20deg);
-  right: 9px;
-  height: 85px;
-  width: 85px;
-}
-
-.character_container > div > div {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  flex-shrink: 1;
 }
