--- a/index.css
+++ b/index.css
@@ -24,6 +24,10 @@ body {
   background: var(--bg-color);
   border-radius: 8px;
   overflow: hidden;
+
+  /* border-style: solid; */
+  /* border-width: 2px; */
+  /* border-color: var(--bg-color); */
 }
 
 .p1.container {
@@ -234,6 +238,11 @@ body {
   border-radius: 8px;
   height: 30px;
   width: 45px;
+
+  /* box-sizing: border-box; */
+  /* border-width: 2px; */
+  /* border-style: solid; */
+  /* border-color: var(--bg-color); */
 }
 
 .under_chips .flag {
@@ -297,10 +306,16 @@ body {
   min-width: unset;
   color: var(--text-color);
   background: rgba(0, 0, 0, 0);
+
+  /* box-sizing: border-box; */
+  /* border-width: 2px; */
+  /* border-style: solid; */
+  /* border-color: rgba(0, 0, 0, 0); */
 }
 
 .under_chips .chip .text:not(.text_empty) {
   color: rgba(0, 0, 0, 0);
+  /* border-color: var(--bg-color); */
 }
 
 .p1 .chip .text:not(.text_empty) {
@@ -333,15 +348,18 @@ body {
   padding-left: 0px;
 }
 
-.topleft.container {
+.topleft_container {
+  position: absolute;
+  top: 38px;
+  width: 488px;
+  height: 53px;
+  display: flex;
+  align-items: center;
   left: -15px;
   width: 360px;
-  overflow: visible;
-  display: flex;
-  position: absolute;
   align-content: center;
   justify-content: left;
-  background: red;
+  background: rgba(0, 0, 0, 0);
 }
 
 .phase_container {
