--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
   display: flex;
   width: 100%;
   height: 53px;
-  font-size: 26px;
+  font-size: 25px;
   justify-content: center;
   box-sizing: border-box;
   width: 100%;
@@ -141,7 +141,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: 70px;
+  width: 80px;
   height: 53px;
   /* background-color: yellow; */
 }
@@ -230,6 +230,10 @@ body {
   transition: opacity 0.5s ease-in-out;
 }
 
+.character_container.unhidden {
+  transition-delay: 0.3s;
+}
+
 .flag {
   display: inline-block;
   background-size: cover;
@@ -246,7 +250,7 @@ body {
 }
 
 .under_chips .flag {
-  opacity: 0%;
+  /* opacity: 0%; */
 }
 
 .chips {
@@ -341,17 +345,20 @@ body {
 }
 
 .p1 .flagcountry.chip .text:not(.text_empty) {
+  padding-left: 4px;
   padding-right: 0px;
+  padding-right: 4px;
 }
 
 .p2 .flagcountry.chip .text:not(.text_empty) {
   padding-left: 0px;
+  padding-right: 4px;
+  padding-left: 4px;
 }
 
 .topleft_container {
   position: absolute;
   top: 38px;
-  width: 488px;
   height: 53px;
   display: flex;
   align-items: center;
@@ -390,7 +397,7 @@ body {
 }
 
 .match .text:not(.text_empty) {
-  font-size: 26px;
+  font-size: 25px;
   padding-left: 24px;
   padding-right: 12px;
   padding-right: 15px;
@@ -454,22 +461,23 @@ body {
 
 .bg {
   position: absolute;
-  width: 960px;
-  height: 1080px;
+  bottom: 13px;
+  height: 196px;
+  width: 348px;
   -webkit-mask-size: contain;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center;
 }
 
 .p1.bg {
-  left: 0;
-  -webkit-mask-image: url("./P1CameraBorder.png");
+  left: 25px;
+  -webkit-mask-image: url("./CameraBorder.png");
   background: var(--p1-score-bg-color);
 }
 
 .p2.bg {
-  right: 0;
-  -webkit-mask-image: url("./P2CameraBorder.png");
+  right: 25px;
+  -webkit-mask-image: url("./CameraBorder.png");
   background: var(--p2-score-bg-color);
 }
 
@@ -483,7 +491,7 @@ body {
 
 .edge {
   position: absolute;
-  width: 70px;
+  width: 80px;
   height: 100px;
   overflow: hidden;
 }
@@ -502,7 +510,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   height: 100%;
-  width: 130px;
+  width: 140px;
 }
 
 .p1 .character_container {
