--- a/index.css
+++ b/index.css
@@ -24,10 +24,6 @@ body {
   background: var(--bg-color);
   border-radius: 8px;
   overflow: hidden;
-
-  /* border-style: solid; */
-  /* border-width: 2px; */
-  /* border-color: var(--bg-color); */
 }
 
 .p1.container {
@@ -143,7 +139,6 @@ body {
   background-position: center;
   width: 80px;
   height: 53px;
-  /* background-color: yellow; */
 }
 
 .p1 .placeholder {
@@ -242,15 +237,6 @@ body {
   border-radius: 8px;
   height: 30px;
   width: 45px;
-
-  /* box-sizing: border-box; */
-  /* border-width: 2px; */
-  /* border-style: solid; */
-  /* border-color: var(--bg-color); */
-}
-
-.under_chips .flag {
-  /* opacity: 0%; */
 }
 
 .chips {
@@ -310,16 +296,10 @@ body {
   min-width: unset;
   color: var(--text-color);
   background: rgba(0, 0, 0, 0);
-
-  /* box-sizing: border-box; */
-  /* border-width: 2px; */
-  /* border-style: solid; */
-  /* border-color: rgba(0, 0, 0, 0); */
 }
 
 .under_chips .chip .text:not(.text_empty) {
   color: rgba(0, 0, 0, 0);
-  /* border-color: var(--bg-color); */
 }
 
 .p1 .chip .text:not(.text_empty) {
@@ -344,16 +324,8 @@ body {
   opacity: 0%;
 }
 
-.p1 .flagcountry.chip .text:not(.text_empty) {
-  padding-left: 4px;
-  padding-right: 0px;
-  padding-right: 4px;
-}
-
-.p2 .flagcountry.chip .text:not(.text_empty) {
-  padding-left: 0px;
-  padding-right: 4px;
-  padding-left: 4px;
+.flagcountry.chip .text:not(.text_empty) {
+  padding: 0px 4px;
 }
 
 .topleft_container {
@@ -392,7 +364,6 @@ body {
 }
 
 .match {
-  /* overflow: hidden; */
   transform: skew(20deg);
 }
 
@@ -411,7 +382,6 @@ body {
   left: -15px;
   width: 350px;
   width: 362px;
-  /* background: blue; */
 }
 
 .score_boxes {
@@ -441,7 +411,6 @@ body {
   font-size: 20px;
 
   border-width: 3px;
-  border-color: var(--bg-color);
   border-color: var(--text-color);
   border-style: solid;
   border-radius: 8px;
@@ -461,23 +430,22 @@ body {
 
 .bg {
   position: absolute;
-  bottom: 13px;
-  height: 196px;
-  width: 348px;
+  width: 960px;
+  height: 1080px;
   -webkit-mask-size: contain;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center;
 }
 
 .p1.bg {
-  left: 25px;
-  -webkit-mask-image: url("./CameraBorder.png");
+  left: 0;
+  -webkit-mask-image: url("./P1CameraBorder.png");
   background: var(--p1-score-bg-color);
 }
 
 .p2.bg {
-  right: 25px;
-  -webkit-mask-image: url("./CameraBorder.png");
+  right: 0;
+  -webkit-mask-image: url("./P2CameraBorder.png");
   background: var(--p2-score-bg-color);
 }
 
@@ -511,11 +479,6 @@ body {
   transform: translateX(-50%);
   height: 100%;
   width: 140px;
-}
-
-.p1 .character_container {
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .p1 .tsh_character {
