--- a/index.css
+++ b/index.css
@@ -5,10 +5,10 @@ body {
   margin: 0;
   width: 1920px;
   height: 1080px;
-  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.12))
-    drop-shadow(0 3px 1px rgba(0, 0, 0, 0.14))
-    drop-shadow(0 1px 5px rgba(0, 0, 0, 0.12))
-    drop-shadow(0 -1px 2px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.24))
+    drop-shadow(0 3px 1px rgba(0, 0, 0, 0.28))
+    drop-shadow(0 1px 5px rgba(0, 0, 0, 0.24))
+    drop-shadow(0 -1px 2px rgba(0, 0, 0, 0.2));
   letter-spacing: 1;
   text-transform: uppercase;
 }
@@ -22,21 +22,32 @@ body {
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  background: var(--bg-color);
+  background-color: var(--bg-color);
   border-radius: 8px;
   overflow: hidden;
+
+  border-style: solid;
+  /* border-top-width: 2px; */
+  /* border-bottom-width: 2px; */
+  border-width: 3px;
 }
 
 .p1.container {
   transform: skew(20deg);
   left: 410px;
   flex-direction: row;
+
+  border-color: var(--p1-score-bg-color);
+  border-right-width: 0px;
 }
 
 .p2.container {
   transform: skew(-20deg);
   right: 410px;
   flex-direction: row-reverse;
+
+  border-color: var(--p2-score-bg-color);
+  border-left-width: 0px;
 }
 
 .name {
@@ -65,32 +76,60 @@ body {
 
 .symbol {
   /* Color of the symbol */
-  background: white;
+  /* background: white; */
   width: 25px;
   height: 25px;
   margin-right: 3px;
 }
 
 .twitter_logo {
-  -webkit-mask-image: url(./icons8-twitterx.svg);
-  -webkit-mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-
-  /* Color of the bird */
-  /* Twitter Blue */
-  /* background: #1da1f2; */
+  background-image: url("./X_twitter_white.png");
+  background-size: cover; /* Adjusts the image to cover the entire div */
+  background-position: center; /* Centers the image */
+  background-repeat: no-repeat; /* Prevents repeating */
 }
+
+/* .twitter_logo {
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  -webkit-mask-image: url("./icons8-twitterx.svg");
+  -webkit-mask-size: cover;
+  -webkit-mask-repeat: no-repeat;
+  position: relative;
+
+  background-size: 100%;
+  background-image: url("./icons8-twitterx.svg");
+  -webkit-filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.75));
+  -moz-filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.75));
+  -ms-filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.75));
+  -o-filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.75));
+} */
+
+/* .twitter_logo::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  -webkit-mask-image: url("./icons8-twitterx.svg");
+  -webkit-mask-size: cover;
+  -webkit-mask-repeat: no-repeat;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.75);
+  z-index: -1;
+} */
 
 .under_chips .twitter_logo {
   background: rgba(0, 0, 0, 0);
 }
 
 .location_logo {
-  -webkit-mask-image: url(./location-sign-svgrepo-com.svg);
-  -webkit-mask-size: contain;
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
+  background-image: url("./map_pin_white.png");
+  background-size: cover; /* Adjusts the image to cover the entire div */
+  background-position: center; /* Centers the image */
+  background-repeat: no-repeat; /* Prevents repeating */
 }
 
 .under_chips .location_logo {
@@ -158,6 +197,7 @@ body {
   flex-grow: 0;
   flex-shrink: 0;
   overflow: hidden;
+  text-shadow: 0em 0em 0.2em #000;
 }
 
 .score_container {
@@ -179,7 +219,7 @@ body {
   right: 0px;
   margin-left: 15px;
   color: var(--p1-score-color);
-  background: var(--p1-score-bg-color);
+  background-color: var(--p1-score-bg-color);
 }
 
 .p2 .score {
@@ -191,7 +231,7 @@ body {
   left: 0px;
   margin-right: 15px;
   color: var(--p2-score-color);
-  background: var(--p2-score-bg-color);
+  background-color: var(--p2-score-bg-color);
 }
 
 .p1 .sponsor {
@@ -295,7 +335,7 @@ body {
   padding-left: 12px;
   padding-right: 12px;
   min-width: unset;
-  color: var(--text-color);
+  /* color: var(--text-color); */
   background: rgba(0, 0, 0, 0);
 }
 
@@ -415,6 +455,9 @@ body {
   border-color: var(--text-color);
   border-style: solid;
   border-radius: 8px;
+
+  /* text-shadow: 3px 3px 3px #000; */
+  text-shadow: 0em 0em 0.2em #000;
 }
 
 .p1_won {
@@ -426,7 +469,8 @@ body {
 }
 
 .neither_won {
-  background: rgba(0, 0, 0, 0.75);
+  /* background: rgba(0, 0, 0, 0.75); */
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .bg {
@@ -480,6 +524,7 @@ body {
   transform: translateX(-50%);
   height: 100%;
   width: 140px;
+  z-index: 1;
 }
 
 .p1 .tsh_character {
