--- a/index.css
+++ b/index.css
@@ -5,12 +5,14 @@ body {
   margin: 0;
   width: 1920px;
   height: 1080px;
+
+  letter-spacing: 1;
+  text-transform: uppercase;
+
   filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.24))
     drop-shadow(0 3px 1px rgba(0, 0, 0, 0.28))
     drop-shadow(0 1px 5px rgba(0, 0, 0, 0.24))
     drop-shadow(0 -1px 2px rgba(0, 0, 0, 0.2));
-  letter-spacing: 1;
-  text-transform: uppercase;
 }
 
 .container {
@@ -29,7 +31,7 @@ body {
   border-style: solid;
   /* border-top-width: 2px; */
   /* border-bottom-width: 2px; */
-  border-width: 3px;
+  border-width: 0px;
 }
 
 .p1.container {
@@ -41,6 +43,14 @@ body {
   border-right-width: 0px;
 }
 
+.p1 .border {
+  top: 0px;
+  background-color: transparent;
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--p1-score-bg-color);
+}
+
 .p2.container {
   transform: skew(-20deg);
   right: 410px;
@@ -48,6 +58,14 @@ body {
 
   border-color: var(--p2-score-bg-color);
   border-left-width: 0px;
+}
+
+.p2 .border {
+  top: 0px;
+  background-color: transparent;
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--p2-score-bg-color);
 }
 
 .name {
@@ -402,6 +420,7 @@ body {
   transform: skew(-20deg);
   background: var(--bg-color);
   border-radius: 8px;
+  filter: drop-shadow(0 0px 2px rgba(255, 255, 255, 0.85));
 }
 
 .match {
@@ -488,10 +507,26 @@ body {
   background: var(--p1-score-bg-color);
 }
 
+.p1.light {
+  left: 0;
+  background-image: url("./P1CameraBorderLight.png");
+}
+
 .p2.bg {
   right: 0;
   -webkit-mask-image: url("./P2CameraBorder.png");
   background: var(--p2-score-bg-color);
+}
+
+.light {
+  position: absolute;
+  width: 960px;
+  height: 1080px;
+}
+
+.p2.light {
+  right: 0;
+  background-image: url("./P2CameraBorderLight.png");
 }
 
 .p1 .tsh-center-image {
@@ -524,7 +559,7 @@ body {
   transform: translateX(-50%);
   height: 100%;
   width: 140px;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .p1 .tsh_character {
